add menu + galery

--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -76,6 +76,10 @@
   &__link {
     color: #0f0f08;
     text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__schedule {
