--- a/src/styles/bloks/header.scss
+++ b/src/styles/bloks/header.scss
@@ -19,7 +19,6 @@
 
   &__container {
     width: 100%;
-    padding-left: 24px;
     position: relative;
 
     @include onTablet {
@@ -36,13 +35,13 @@
   }
 
   &__image-container {
-
+    display: flex;
     background-image: url(../images/header-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 100%;
 
-    padding: 20px 40px;
+    padding: 9px 40px;
     margin-bottom: 20px;
     width: 100%;
     height: 329px;
@@ -64,13 +63,15 @@
   &__menu {
     display: block;
     width: 88px;
+    height: 40px;
+    padding-top: 24px;
 
     @include onTablet {
-      padding: 8px 0 5px 8px;
+      padding: 36px  5px 8px;
     }
 
     @include onDesktop {
-      padding-top: 40px;
+      padding-top: 36px;
     }
 
     &--tablet {
