--- a/src/styles/bloks/sign-up.scss
+++ b/src/styles/bloks/sign-up.scss
@@ -84,6 +84,15 @@
     border: transparent;
     outline: none;
 
+    &::placeholder {
+      font-family: $ff-Montserrat;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
+      padding: 32px 28px;
+    }
+
     @include onTablet {
       width: 374px;
 
