--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -1,7 +1,8 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
+  /*grid-template-columns: repeat(2, 1fr);*/
+  grid-template-columns: repeat(1, 1fr);
+  /*column-gap: 20px;*/
 
   @include onDeskTop {
     grid-template-columns: repeat(12, 1fr);
