--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,8 +4,14 @@
   }
 }
 
+@mixin onTablet {
+  @media (min-width:750px) {
+    @content;
+  }
+}
+
 @mixin onMobile {
-  @media (max-width: 750px) {
+  @media (min-width: 320px) {
     @content;
   }
 }
