almost final - cant get the footer to work properly

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,13 +3,30 @@
   justify-content: space-between;
   padding: 48px 54px;
 
+  &__logo-container {
+    grid-column: 1/12;
+
+    @include onDeskTop {
+      grid-column: 1/2;
+    }
+  }
+
   &__link-container {
-    position: absolute;
+    /*position: absolute;*/
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     margin: 0 auto;
     float: none;
+    /*display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    @include onDeskTop {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+    }*/
   }
 
   &__link {
@@ -27,7 +44,7 @@
     justify-content: space-between;
     flex-direction: column;
 
-    &-divic {
+    &-pic {
       margin-bottom: 62px;
     }
 
@@ -112,172 +129,3 @@
 .bold {
   font-weight: 700;
 }
-
-/*.footer {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(2, minmax(95px, 1fr));
-  height: 300px;
-  font-weight: 400;
-  font-size: 14px;
-
-  @include onTablet {
-    grid-gap: 24px;
-    grid-template-columns: repeat(6, minmax(70px, 1fr));
-  }
-
-  @include onDeskTop {
-    grid-gap: 24px;
-    grid-template-columns: repeat(12, minmax(70px, 1fr));
-  }
-  &__content {
-    padding-top: 50px;
-    padding-bottom: 80px;
-
-  }
-
-  &__logo-wrapper {
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    grid-column: 1 / span 2 ;
-
-    @include onTablet {
-      flex-direction: column;
-      height: 70%;
-      grid-column: 1;
-    }
-
-    @include onDeskTop {
-      flex-direction: column;
-      height: 20%;
-      grid-column: 1;
-    }
-  }
-
-  &__icon-wrapper {
-    display: flex;
-    gap: 30px;
-  }
-
-  &__schedule-wrapperr {
-    width: 110px;
-    grid-column: 1;
-
-    @include onTablet {
-      width: 100%;
-      grid-column: 2 / span 2;
-    }
-
-    @include onDeskTop {
-      width: 100%;
-      grid-column: 3 / span 2;
-    }
-  }
-
-  &__schedule-content {
-    margin: 0;
-    padding: 0;
-    align-self: start;
-    grid-column: 1;
-
-    @include onTablet {
-      grid-column: 2 / span 2;
-    }
-
-    @include onDeskTop {
-      width: 100%;
-      grid-column: 3 / span 2;
-    }
-  }
-
-  &__schedule-slot {
-    &--last {
-      padding-top: 20px;
-    }
-  }
-
-  &__schedule-title,
-  &__schedule-day,
-  &__schedule-time,
-  &__nav-link {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 140.62%;
-    color: #0f0e08;
-  }
-
-  &__contacts{
-    width: 100%;
-    box-sizing: border-box;
-    margin-left: 25px;
-  }
-
-  &__schedule-time {
-    font-weight: 700;
-  }
-
-  &__nav {
-    padding-top: 40px;
-    display: grid;
-    grid-auto-flow: column;
-    border-top: 1px solid #1a5a4c;
-
-    @include onDeskTop {
-      padding-top: 0;
-      grid-column: 7 / 11;
-      gap: 30px;
-      padding-left: 60px;
-    }
-  }
-
-  &__nav-item {
-    line-height: 21px;
-    grid-row: 2;
-    grid-column: 2;
-    color: black;
-    text-decoration: none;
-    list-style: none;
-
-    @include onTablet {
-      grid-row: 1;
-      grid-column: 4 / span 2;
-    }
-
-    @include onDeskTop {
-      width: 100%;
-      grid-column: 5 / span 2;
-    }
-    /*list-style: none;
-    &:last-child {
-      margin-top: 20px;
-    }
-  }
-
-  &__nav-link {
-    line-height: 100%;
-    text-decoration: none;
-  }
-
-  &__go-top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    position: absolute;
-    bottom: 200px;
-    right: 30px;
-
-    @include onMobile {
-      display: none;
-    }
-  }
-
-  &__go-top-link {
-    color: #1a5a4c;
-    padding: 100%;
-  }
-}*/
