--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -16,6 +16,12 @@
           grid-column: #{$start} / #{$end + 1};
         }
 
+        &--mobile-#{$start}-#{$end} {
+          @include onMobile {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+
         &--desktop-#{$start}-#{$end} {
           @include onDeskTop {
             grid-column: #{$start} / #{$end + 1};
