--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -49,6 +49,11 @@
 .hero {
   &__background {
     width: 100%;
+    object-fit: cover;
+
+    &--row {
+      grid-row: 1;
+    }
 
     @include onDeskTop {
       width: 50vw;
