add section subscription

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,7 @@
   scroll-behavior: smooth;
 
   &__body {
-    background-color: #e5e5e5;
+    background-color: #fff;
     margin: 0;
 
     &--with-menu {
@@ -22,7 +22,7 @@
     left: 0;
     right: 0;
 
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     transition: transform 0.3s;
 
     &:target {
@@ -31,29 +31,37 @@
   }
 
   &__section {
-    margin-bottom: 60px;
+    margin-bottom: 70px;
 
     @include onTablet {
-      margin-bottom: 120px;
+      margin-bottom: 88px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
     }
   }
 
   &__section-title {
-    margin: 0 0 48px;
-
-    font-weight: 500;
-    font-size: 32px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
     line-height: 100%;
     text-align: center;
-    letter-spacing: -1.5px;
     color: #fff;
+    margin: 0 0 20px;
 
     @include onTablet {
       font-size: 48px;
     }
+  }
 
-    @include onDesktop {
-      font-size: 64px;
-    }
+  &__section-paragraph {
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    text-align: center;
   }
 }
