--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,9 @@
 @import "blocks/page";
 @import "blocks/header";
 @import "blocks/menu";
+@import "blocks/subscription";
+@import "blocks/form-field";
+@import "blocks/footer";
 
 a {
   margin: 0;
