--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,8 +4,8 @@
     content: "";
     display: block;
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     width: 100%;
     height: 300px;
     z-index: -1;
@@ -60,11 +60,26 @@
     text-align: center;
     margin: 0 0 20px;
 
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 45px;
     line-height: 100%;
     color: #000;
+
+    &::before {
+      position: absolute;
+      bottom: 100px;
+      left: 20px;
+      content: "ПОДІЇ";
+      display: block;
+      font-family: "IBM Plex Sans",sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      color: #687480;
+      transform: rotate(-90deg);
+      opacity: 0;
+    }
 
     @include onTablet {
       text-align: left;
@@ -79,6 +94,10 @@
       font-size: 72px;
       line-height: 120%;
       color: #000;
+
+      &::before {
+        opacity: 1;
+      }
     }
   }
 }
