--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,13 +10,29 @@
   background: $c-gray;
   color: $c-text;
   scroll-behavior: smooth;
+  position: relative;
 
   a {
     color: $c-text;
+    transition: 0.3s linear;
+
   }
 
   &__menu-on {
     overflow: hidden;
+  }
+
+  &__to-home {
+    display: block;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    z-index: 2;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 50%;
+    border: 2px solid #1a5a4c;
+    background: url("../images/tohome.svg") center/20% no-repeat;
   }
 
   &__title--h2 {
@@ -566,6 +582,11 @@
     color: #687480;
     padding: 0 24px;
 
+    &:focus {
+      color: $c-text;
+      outline: none;
+    }
+
     @include onDesktop {
       padding: 0 32px;
     }
@@ -761,4 +782,56 @@
     line-height: 140.62%;
     color: $c-text;
   }
+}
+
+.gallery {
+  margin-bottom: 100px;
+
+  @include onTablet {
+    margin-bottom: 92px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
+
+  &__title {
+    margin-bottom: 40px;
+
+    @include  onTablet {
+      margin-bottom: 48px;
+    }
+
+    @include  onDesktop {
+      margin-bottom: 56px;
+    }
+  }
+
+  &__grid {
+    row-gap: 30px;
+
+    @media (max-width: 1020px) {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      align-items: center;
+    }
+  }
+
+  &__img {
+    object-fit: cover;
+    max-width: 100%;
+    height: 100%;
+    display: none;
+
+    &--active {
+      display: block;
+    }
+
+    @include onDesktop {
+      width: 100%;
+      display: block;
+    }
+  }
+
 }
