--- a/src/styles/block/classic.scss
+++ b/src/styles/block/classic.scss
@@ -10,7 +10,6 @@
   }
 
   &__container {
-    width: 320px;
     margin: 0 auto;
   
     @include on768 {
@@ -23,8 +22,6 @@
   }
 
   &__photo {
-    width: 320px;
-    height: 210px;
   
     @include on768 {
       width: 690px;
@@ -48,7 +45,7 @@
     width: 280px;
     margin: 0 auto;
     padding-bottom: 20px;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   
     @include on768 {
       width: 570px;
@@ -73,7 +70,6 @@
     @include on768 {
       width: 460px;
     }
-  
   
     &--name {
       font-family: "IBM Plex Sans", sans-serif;
