--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   margin-top: 50px;
-  font-family: "IBM Plex Sans",serif;
+  font-family: "IBM Plex Sans", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -34,7 +34,7 @@
   }
 
   &__logo {
-    grid-row-start: 1;
+    grid-row: 1/2;
     grid-column: 1/2;
     
     &--image {
@@ -50,10 +50,14 @@
     @include on768 {
       grid-column: 1/2;
     }
+
+    @include on1280 {
+      grid-row-start: 1;
+    }
   }
 
   &__socials {
-    grid-row-start: 1;
+    
     grid-column: 2/-1;
     justify-self: flex-end;
   
@@ -65,9 +69,10 @@
   
     @include on768 {
       justify-self: start;
-      grid-row-start: 1;
+      grid-row: 1;
       grid-column: 1/2;
-      
+      align-items: flex-start;
+      margin-top: 200px;
     }
   
     &--facebook {
@@ -133,7 +138,6 @@
   &__nav {
     grid-column: 1/-1;
   
-  
     display: flex;
     flex-wrap: wrap;
     margin-top: 40px;
@@ -191,7 +195,7 @@
     margin-top: 80px;
     grid-column: 1/-1;
   
-    font-family: 'IBM Plex Sans', serif;
+    font-family: "IBM Plex Sans", serif;
     font-style: normal;
     font-weight: 300;
     font-size: 12px;
@@ -217,7 +221,7 @@
     padding-bottom: 60px;
     grid-column: 1/-1;
   
-    font-family: 'IBM Plex Sans', serif;
+    font-family: "IBM Plex Sans", serif;
     font-style: normal;
     font-weight: 300;
     font-size: 12px;
