--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -25,7 +25,6 @@
     height: 61px;
     margin: 0 auto;
     
-  
     background-image: url(../images/NAMU.svg);
     background-repeat: no-repeat;
     background-size: contain;
@@ -35,7 +34,7 @@
     }
   }
 
-  &__nav  {
+  &__nav {
     width: 280px;
     margin: 0 auto;
     margin-top: 60px;
@@ -52,7 +51,7 @@
     &--link {
       margin-bottom: 40px;
       text-decoration: none;
-      font-family: 'IBM Plex Sans';
+      font-family: "IBM Plex Sans", serif;
       font-style: normal;
       font-weight: 400;
       font-size: 28px;
