--- a/src/styles/block/subscribe.scss
+++ b/src/styles/block/subscribe.scss
@@ -10,12 +10,11 @@
   }
 
   &__container {
-    width: 320px;
     margin: 0 auto;
     background-image: url(../images/bcksubscription.png);
     background-repeat: no-repeat;
-    background-size:cover;
-    background-position:center;
+    background-size: cover;
+    background-position: center;
   
     @include on768 {
       width: 768px;
@@ -55,7 +54,7 @@
     font-size: 18px;
     line-height: 150%;
     text-align: center;
-    color: #FFFFFF;
+    color: #fff;
 
     &:hover {
       color: $red-color;
@@ -99,7 +98,7 @@
       outline: none;
       border: 1px solid #fff;
       padding-left: 24px;
-      font-family: "Montserrat",sans-serif;
+      font-family: "Montserrat", sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 14px;
@@ -111,7 +110,6 @@
         color: #fff;
       }
       
-    
       @include on768 {
         width: 374px;
         height: 70px;
@@ -120,6 +118,22 @@
       @include on1280 {
         width: 470px;
         padding-left: 32px;
+      }
+    }
+
+    &--button {
+      width: 50px;
+      height: 50px;
+      outline: none;
+      border: none;
+
+      background-image: url(../images/Group57.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+
+      @include on768 {
+        width: 70px;
+        height: 70px;
       }
     }
   }
