--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -41,7 +41,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 100%;
-  color: #0F0E08;
+  color: $black-color;
 
   @include on768 {
     font-size: 48px;
@@ -78,4 +78,3 @@
   line-height: 150%;
   color: $green-color;
 }
-
