--- a/src/styles/block/actual.scss
+++ b/src/styles/block/actual.scss
@@ -9,10 +9,11 @@
   }
 
   &__container {
-    width: 280px;
     margin: 0 auto;
+    padding: 0 20px;
   
     @include on768 {
+      padding: 0;
       width: 690px;
   
       display: grid;
@@ -48,9 +49,7 @@
   }
 
   &__photo {
-  
-    width: 280px;
-    height: 210px;
+    margin: 0 auto;
 
     @include on768 {
       width: 690px;
@@ -147,7 +146,7 @@
   
     &--1 {
       @include on768 {
-      grid-column: 1/3;
+        grid-column: 1/3;
       }
   
       @include on1280 {
@@ -229,7 +228,7 @@
 
   &__text {
     margin-top: 10px;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
