--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -10,7 +10,7 @@
   }
 
   &__container {
-    width: 280px;
+    padding: 0 20px;
     margin: 0 auto;
   
     display: grid;
@@ -18,6 +18,7 @@
     column-gap: 20px;
   
     @include on768 {
+      padding: 0;
       width: 690px;
       grid-template-columns: repeat(6,1fr);
       column-gap: 30px;
@@ -25,7 +26,7 @@
   
     @include on1280 {
       width: 1170px;
-      grid-template-columns: repeat(12,1fr)
+      grid-template-columns: repeat(12,1fr);
     }
   }
 
