Museum ver 1.1 (menu is modified)

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,8 +3,10 @@
   display: block;
   position: absolute;
   top: 0;
-  width: 75vw;
-  height: 350px;
+  // width: 75vw;
+  // height: 350px;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   background-color: $color-main;
   overflow-y: auto;
