add fix from checklist

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,6 +35,14 @@
     background: url("../images/tohome.svg") center/20% no-repeat;
   }
 
+  .scale {
+    transition: transform 0.3s linear;
+
+    &:hover {
+      transform: scale(1.02);
+    }
+  }
+
   &__title--h2 {
     font-family: "Montserrat", sans-serif;
     font-style: normal;
@@ -723,6 +731,14 @@
   gap: 20px;
   width: 50%;
   padding-left: 10px;
+
+  &__link:hover {
+    color: #f14a27;
+  }
+
+  &__wrap {
+    white-space: nowrap;
+  }
 
   @include onTablet {
     width: 100%;
