max-width added

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,6 +9,8 @@
     }
 
     @include onDesktop() {
+      max-width: 1280px;
+      margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(11, 1fr);
       column-gap: 30px;
