--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -51,12 +51,15 @@
   }
 
   &__bottom-image {
+    max-width: 1280px;
+    margin: 0 auto;
     width: 100%;
     height: 210px;
     position: relative;
     background-image: url(/images/bottom.jpg);
     background-size: cover;
     background-position: center;
+
 
     @include onTablet() {
       width: 100%;
