--- a/src/styles/blocks/header__burgerMenu.scss
+++ b/src/styles/blocks/header__burgerMenu.scss
@@ -1,63 +1,64 @@
-.header__burgerMenu {
-  position: fixed;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: $colorGreen;
-  transition: transform 0.8s;
+.header {
+  &__burgerMenu {
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: $colorGreen;
+    transition: transform 0.8s;
 
-  transform: translateX(-100%);
+    transform: translateX(-100%);
 
-  &:target {
-    transform: translateX(0);
-  }
-
-  &-icon {
-    display: block;
-    width: 70px;
-    margin: 50px;
-
-    @include onTablet {
-      margin: 25px;
+    &:target {
+      transform: translateX(0);
     }
 
-    @include onMobile {
-      margin: 15px;
-    }
-  }
+    &-icon {
+      display: block;
+      width: 70px;
+      margin: 50px;
 
-  &-link {
-    text-decoration: none;
-    color: $colorOrange;
+      @include onTablet {
+        margin: 25px;
+      }
 
-    &:hover {
-      color: azure;
-    }
-  }
-
-  &-li {
-    list-style: none;
-    margin: 50px;
-
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 72px;
-    line-height: 86px;
-
-    @include onTablet {
-      font-size: 36px;
-      line-height: 43px;
-
-      margin: 25px;
+      @include onMobile {
+        margin: 15px;
+      }
     }
 
-    @include onMobile {
-      font-size: 18px;
-      line-height: 43px;
+    &-link {
+      text-decoration: none;
+      color: $colorOrange;
 
-      margin: 15px;
+      &:hover {
+        color: azure;
+      }
+    }
+
+    &-li {
+      list-style: none;
+      margin: 50px;
+
+      font-family: "Montserrat", sans-serif;
+      font-weight: 700;
+      font-size: 72px;
+      line-height: 86px;
+
+      @include onTablet {
+        font-size: 36px;
+        line-height: 43px;
+
+        margin: 25px;
+      }
+
+      @include onMobile {
+        font-size: 18px;
+        line-height: 43px;
+
+        margin: 15px;
+      }
     }
   }
 }
