--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -97,7 +97,6 @@
 
     &--content {
       font-family: "Montserrat", sans-serif;
-      font-style: normal;
       font-size: 45px;
       line-height: 45px;
       font-weight: 700;
@@ -153,6 +152,7 @@
       border: 1px solid $colorGreen;
       padding: 14px 50px;
       text-decoration: none;
+      transition: background-color 0.8s;
 
       color: $colorBlack;
 
@@ -224,7 +224,6 @@
 
     &--content {
       font-family: "IBM Plex Sans", sans-serif;
-      font-style: normal;
       font-size: 14px;
       line-height: 14px;
       font-weight: 700;
