--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -48,7 +48,6 @@
   }
 
   &__tickets {
-    position: absolute;
     bottom: 500px;
     display: flex;
     width: 280px;
@@ -69,15 +68,17 @@
       width: 270px;
       height: 70px;
     }
+
     @include onDesktop() {
-      display: flex;
+      position: relative;
+      text-align: left;
 
-      position: absolute;
-      top: 500px;
-      left: 200px;
-
-      width: 270px;
-      height: 70px;
+      bottom: 650px;
+      font-weight: 700;
+      font-size: 72px;
+      line-height: 120%;
+      margin-bottom: 10px;
+      margin-left: 55px;
     }
 
     &-button {
@@ -126,8 +127,9 @@
     display: none;
     @include onDesktop() {
       display: flex;
-      margin-top: 555px;
-      margin-left: 50px;
+      margin-right: 100px;
+      top: 517px;
+      bottom: 20px;
       transform-origin: 0 0;
       transform: rotate(-90deg);
       font-family: "IBM Plex Sans", sans-serif;
@@ -184,15 +186,10 @@
       height: 12px;
       width: 18px;
 
-      @include onTablet {
-        position: absolute;
-        top: 50px;
-        left: 34px;
-      }
       @include onDesktop {
-        position: absolute;
-        top: 50px;
-        left: 55px;
+        position: relative;
+        right: 700px;
+        bottom: 20px;
       }
     }
 
@@ -203,7 +200,7 @@
 
   &__text-block {
     @include onDesktop {
-
+      position: absolute;
       grid-column: 1 / 6;
     }
   }
@@ -230,7 +227,8 @@
       position: relative;
       text-align: left;
 
-      bottom: 550px;
+      top: 200px;
+      right: 150px;
       font-weight: 700;
       font-size: 72px;
       line-height: 120%;
