--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -10,7 +10,8 @@
     }
 
     @include onDesktop {
-      margin-bottom: 10px;
+      max-width: 1920px;
+      margin: 0 auto;
     }
   }
 
@@ -20,6 +21,7 @@
     left: 0;
     right: 0;
     z-index: 2;
+    // max-width: 1980px;
 
     transform: translateX(-100%);
     transition: transform 0.3s;
