--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,7 +9,7 @@
     }
 
     @include onDesktop() {
-      max-width: 1280px;
+      max-width: 1980px;
       margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(11, 1fr);
@@ -127,9 +127,8 @@
     display: none;
     @include onDesktop() {
       display: flex;
-      margin-right: 100px;
+      margin-left: 20px;
       top: 517px;
-      bottom: 20px;
       transform-origin: 0 0;
       transform: rotate(-90deg);
       font-family: "IBM Plex Sans", sans-serif;
@@ -188,7 +187,7 @@
 
       @include onDesktop {
         position: relative;
-        right: 700px;
+        right: 90%;
         bottom: 20px;
       }
     }
@@ -200,6 +199,7 @@
 
   &__text-block {
     @include onDesktop {
+      pointer-events: none;
       position: absolute;
       grid-column: 1 / 6;
     }
@@ -228,7 +228,7 @@
       text-align: left;
 
       top: 200px;
-      right: 150px;
+      right: 30px;
       font-weight: 700;
       font-size: 72px;
       line-height: 120%;
