--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background-color: #cd6e5a;
+  // background-color: #cd6e5a;
 
   z-index: 2;
 
@@ -9,7 +9,7 @@
   &__icons {
     margin: 25px;
     @include onDesktop {
-      margin: 45px;
+      margin: 30px;
       left: 30px;
     }
   }
@@ -19,6 +19,7 @@
     height: 100vh;
     padding: 0;
     margin-top: 50px;
+
   }
 
   &__list {
