--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -16,18 +16,26 @@
   }
 
   &__menu {
+    background-color: #fff;
+
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 2;
-    // max-width: 1980px;
 
     transform: translateX(-100%);
     transition: transform 0.3s;
 
     &:target {
       transform: translateX(0);
+      display: initial;
+      background-color: #cd6e5a;
+    }
+
+    @include onDesktop {
+      max-width: 1980px;
+      width: 100%;
     }
   }
 }
