--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,7 @@
 @import "blocks/gallary.scss";
 @import "blocks/subscription.scss";
 @import "blocks/footer.scss";
+
+html {
+  scroll-behavior: smooth;
+}
