--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,6 +5,13 @@
   }
 }
 
+@mixin hoverPic {
+  transition: transform 0.3s;
+  &:hover {
+    transform: scale(110%);
+  }
+}
+
 @mixin onTablet {
   @media (min-width: 768px) {
     @content;
