--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -101,7 +101,7 @@
       }
       @include onDesktop() {
         position: absolute;
-        margin: 440px 300px;
+        margin: 25% 35%;
         width: 570px;
       }
     }
