--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,8 +20,7 @@
   // padding: 0 20px;
 
   @include onDesktop {
-    // max-width: 1170px;
+    max-width: 1920px;
     margin: 0 auto;
-    // padding: 0 10px;
   }
 }
