--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,7 +10,6 @@
   @include onDesktop() {
     display: flex;
     box-sizing: border-box;
-    margin: 10px 20px 55px;
   }
 
   &__title {
@@ -28,8 +27,17 @@
     }
     @include onDesktop() {
       text-align: left;
-      margin: 0 20px 40px;
+      margin: 50px 50px 40px;
+      // max-width: 1920px;
+      width: 100%;
     }
+  }
+
+  &__content {
+    // display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    margin-left: 50px;
   }
 
   &__first {
@@ -37,22 +45,24 @@
     box-sizing: border-box;
     width: 100%;
 
-    gap: 20px;
+    gap: 50px;
     margin: 0 0 30px;
+
+    // width: 1920px;
   }
 
   &__second {
     display: flex;
     box-sizing: border-box;
-    width: 100%;
 
     gap: 50px;
-    margin: 0 0 40px;
+    margin: 0 0 30px;
+
+    // width: 1920px;
   }
 
   &__image {
 
-    width: 100%;
     transition: transform 0.3s;
 
     &:hover {
