--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -1,10 +1,22 @@
 .page__section {
   box-sizing: border-box;
 
+  &--content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    @include onDeskTop {
+      flex-direction: row;
+    }
+  }
+
   &--container {
     max-width: 370px;
-    margin-right: 55px;
+    margin: auto;
   }
+
   &-title {
     text-align: center;
     font-weight: 700;
@@ -23,7 +35,7 @@
 
   &-painting {
     /*width: 100%;*/
-    margin: 0 auto;
+    margin-bottom: 20px;
 
     @include onDeskTop {
       height: 600px;
@@ -86,8 +98,6 @@
     padding: 100px;
     margin-top: 448px;
     max-width: 100%;
-
-    
 
     background-color: #fff;
     margin-bottom: 200px;
