--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,9 +5,9 @@
 
   &__image {
     height: 61px;
-    transform: translate(-40px);
 
     @include onTablet {
+      justify-content: center;
       height: 72px;
     }
   }
