--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -35,9 +35,11 @@
     padding: 8px;
     border-bottom: 1px solid transparent;
 
-    font-weight: 700;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
     font-size: 22px;
-    line-height: 22px;
+    line-height: 100%;
     color: #1d1d1d;
     text-decoration: none;
     letter-spacing: 2px;
