--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -33,6 +33,10 @@
   &__section {
     margin-bottom: 70px;
 
+    &:last-child {
+      margin-bottom: 48px;
+    }
+
     @include onTablet {
       margin-bottom: 88px;
     }
@@ -57,7 +61,7 @@
   }
 
   &__section-paragraph {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
