--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,1 +1,87 @@
-//footer
+.footer {
+
+  &__logo {
+
+    @include onTablet {
+      padding-bottom: 62px;
+    }
+  }
+
+  &__social {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  &__subtitle {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    color: #0F0E08;
+    margin: 0;
+  }
+
+  &__txt {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    line-height: 150%;
+    color: #0F0E08;
+  }
+
+
+  &__line {
+    width: 1px;
+    height: 280px;
+    background: rgba(26, 90, 76, 0.5);
+    transform: rotate(-90deg);
+
+    @include onTablet {
+      width: 1px;
+      height: 460px;
+    }
+
+    @include onDesktop {
+      width: 1px;
+      height: 260px;
+      background: rgba(26, 90, 76, 0.5);
+      transform: rotate(180deg);
+    }
+  }
+
+  &__list {
+    margin: 0 0 40px;
+    padding: 0;
+    list-style: none;
+
+    @include onDesktop {
+      margin: 0 0 48px;
+    }
+  }
+
+  &__item {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__link {
+    display: inline-block;
+    padding: 8px;
+    border-bottom: 1px solid transparent;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: #0f0e08;
+    text-decoration: none;
+    transition: border-color 0.3s;
+
+    &:hover {
+      border-color: #1a5a4c;
+    }
+  }
+}
