--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -48,4 +48,14 @@
   &--cross {
     background-image: url(../images/cross.svg);
   }
+
+  &--facebook {
+    background-image: url(../images/facebook.png);
+    height: 24px;
+  }
+
+  &--instagram {
+    background-image: url(../images/instagram.png);
+    height: 24px;
+  }
 }
