--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -21,49 +21,6 @@
   margin-top: 200px;
   padding-top: 200px;
 
-  /*@include onDeskTop {
-    display: block;
-  }
-
-  @include onMobile {
-    display: none;
-  }*/
-
-  /*&__photo-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%;
-    max-height: 600px;
-    margin: 0 auto;
-
-    @include onDeskTop {
-      height: 600px;
-      padding-bottom: 0;
-    }
-
-    &::after {
-      content: "";
-      display: block;
-      padding-bottom: 100%;
-    }
-  } 06.08 */
-
-  /*&__photo {
-    position: absolute;
-    width: 100%;
-    height: 410px;
-    margin-left: 30px;
-    margin-right: 30px;
-
-    object-fit: cover;
-    object-position: top;
-
-    @include onDeskTop {
-      height: 600px;
-      padding-bottom: 30px;
-    }
-  }*/
-
   &__photo-container {
     position: relative;
     width: 100%;
@@ -76,12 +33,6 @@
       height: 600px;
       padding-bottom: 0;
     }
-
-    /*&::after {
-      content: "";
-      display: block;
-      padding-bottom: 100%;
-    }*/
   }
 
   &__photo {
@@ -94,6 +45,13 @@
 
     object-fit: cover;
     object-position: top;
+
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+      cursor: pointer;
+    }
 
     @include onDeskTop {
       height: 600px;
