--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -49,6 +49,10 @@
       font-size: 14px;
       line-height: 14px;
       color: #687480;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     &-search {
@@ -62,6 +66,10 @@
       border: 1px solid transdivarent;
       text-decoration: none;
       text-align: center;
+      
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
