--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,28 +22,6 @@
     padding: 50px;
     font-weight: 700;
   }
-
-  /*&__menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
-    position: relative;
-
-    &-opnener {
-      position: absolute;
-      height: 12px;
-      width: 18px;
-    }
-
-    &-logo {
-      position: absolute;
-      left: 0;
-      right: 0;
-      margin: auto;
-      width: 55px;
-    }
-  }*/
 }
 
 .hero {
@@ -89,6 +67,10 @@
       box-sizing: border-box;
       text-transform: uppercase;
       padding: 10px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
     &--search {
       width: 50px;
@@ -111,77 +93,3 @@
     display: block;
   }
 }
-
-/*.header {
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  /*background-image: url(../images/background.png);
-  top: 0;
-  left: 0;
-  right: 0;
-
-  &__background {
-    width: 100%;
-  }
-
-  &__menu {
-    display: flex;align-items: center;
-    height: 90px;
-    position: relative;
-    &-opener {
-      height: 12px;
-      width: 18px;
-    }
-
-    &-logo {
-      position: absolute;
-      left: 0;
-      right: 0;
-      margin: auto;
-      width: 55px;
-    }
-  }
-}
-
-.hero {
-  &__background {
-    width: 100%;
-  }
-  &__title {
-    text-align: center;
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 45px;
-    padding-top: 206px;
-  }
-
-  &__button {
-    height: 50px;
-    justify-content: center;
-    padding-bottom: 70px;
-    padding-top: 89px;
-
-    &-item {
-      width: 230px;
-      height: 50px;
-      border: 1px solid #1a5a4c;
-      text-align: center;
-      box-sizing: border-box;
-      text-transform: uppercase;
-    }
-    &-search {
-      width: 50px;
-      height: 50px;
-      background-image: url(../images/rectangle.png);
-      color: #fff;
-      padding: 0;
-      margin: 0;
-      border: 1px solid transparent;
-      text-decoration: none;
-      text-align: center;
-      box-sizing: border-box;
-    }
-  }
-}*/
