--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -6,6 +6,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
 
     @include onDeskTop {
       flex-direction: row;
@@ -24,6 +26,12 @@
     line-height: 36px;
     margin-top: 200px;
     padding-bottom: 40px;
+
+    @include onDeskTop {
+      display: flex;
+      justify-content: start;
+      margin-left: 55px;
+    }
   }
 
   &-container {
@@ -34,38 +42,54 @@
   }
 
   &-painting {
-    /*width: 100%;*/
     margin-bottom: 20px;
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+      cursor: pointer;
+    }
 
     @include onDeskTop {
       height: 600px;
       margin-bottom: 104px;
       margin-left: 55px;
+      margin-right: 130px;
     }
   }
 
+  &--orange {
+    height: 15px;
+    width: 15px;
+    align-self: center;
+    margin-left: 12px;
+  }
+
   &-description {
-    display: inline-block;
+    /*display: inline-block;*/
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
     color: #687480;
     text-align: left;
-    margin-bottom: 32px;
+    /*margin-bottom: 32px;*/
   }
 
   &-date {
-    display: inline-block;
-    padding-left: 130px;
+    /*display: inline-block;*/
+    /*padding-left: 130px;*/
+    white-space: nowrap;
     font-weight: 700;
     font-size: 16px;
     line-height: 16px;
     color: #1a5a4c;
     text-align: right;
-    margin-bottom: 32px;
+    /*margin-bottom: 32px;*/
   }
 
   &-name {
+    display: flex;
+    justify-content: center;
     width: 100%;
     font-weight: 400;
     font-size: 28px;
@@ -81,6 +105,8 @@
   }
 
   &-lection {
+    display: flex;
+    justify-content: center;
     background-image: url(../images/classicism.png);
     margin: 0;
     width: 100%;
@@ -94,12 +120,31 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 100px;
     margin-top: 448px;
+    width: 80vw;
     max-width: 100%;
+
+    @include onDeskTop {
+      width: 60vw;
+    }
 
     background-color: #fff;
     margin-bottom: 200px;
+
+    &--top {
+      display: flex;
+      gap: 20px;
+      justify-content: space-between;
+
+      @include onDeskTop {
+        gap: 130px;
+      }
+    }
   }
+}
+
+.top {
+  margin: 20px;
 }
