--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -17,7 +17,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 140%;
-    color: #0F0E08;
+    color: #0f0e08;
     margin: 0;
   }
 
@@ -25,9 +25,8 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     line-height: 150%;
-    color: #0F0E08;
+    color: #0f0e08;
   }
-
 
   &__line {
     width: 1px;
