--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,12 +8,14 @@
 @import "blocks/button";
 
 @import "blocks/page";
+@import "blocks/place";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/events";
 @import "blocks/subscription";
 @import "blocks/form-field";
 @import "blocks/footer";
+@import "blocks/gallery";
 
 a {
   margin: 0;
