--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -2,6 +2,7 @@
   &__wrapper {
     @include onDesktop {
       display: flex;
+      justify-content: center;
       align-items: center;
     }
   }
