--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,16 +10,17 @@
   &__content {
     display: flex;
     justify-content: space-between;
-    box-sizing: border-box;
   }
 
   &__logo {
-    padding: 50px;
+    padding-top: 9px;
     margin: auto;
+    align-content: center;
   }
 
   &__opener {
-    padding: 50px;
+    margin-left: 23px;
+    margin-top: 33px;
     font-weight: 700;
   }
 }
@@ -48,40 +49,57 @@
     font-size: 45px;
     line-height: 45px;
     padding-top: 206px;
+
+    @include onDeskTop {
+      text-align: start;
+      padding-left: 55px;
+    }
   }
 
   &__button {
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    height: 50px;
     justify-content: center;
     padding-bottom: 70px;
     padding-top: 89px;
 
+    @include onDeskTop {
+      justify-content: end;
+    }
+
     &--item {
-      width: 230px;
-      height: 50px;
       border: 1px solid #1a5a4c;
       text-align: center;
       box-sizing: border-box;
       text-transform: uppercase;
-      padding: 10px;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-weight: 500;
+      padding: 18px 80px;
+
+      @include onDeskTop {
+        padding: 29px 66px;
+      }
 
       &:hover {
         cursor: pointer;
       }
     }
+
     &--search {
-      width: 50px;
-      height: 50px;
-      background-image: url(../images/rectangle.png);
+      background-color: #1a5a4c;
       color: #fff;
       margin: 0;
       border: 1px solid transparent;
       text-decoration: none;
-      padding: 15px;
+      padding: 19px;
       box-sizing: border-box;
+      line-height: 12px;
+      font-weight: 500;
+
+      @include onDeskTop {
+        padding: 30px;
+      }
     }
   }
 }
@@ -91,5 +109,16 @@
 
   @include onDeskTop {
     display: block;
+  }
+}
+
+.logo-pic {
+  width: 55px;
+  height: 61px;
+
+  @include onDeskTop {
+    width: 170px;
+    height: 72px;
+    object-fit: contain;
   }
 }
