--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,13 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+%text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+}
