--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$headerTopPadding: 9px;
+$colorDarkGreen: #1a5a4c;
+$colorMidBlack: #0f0e08;
+$colorLightRed: #f14a27;
+$colorLightGrey: #687480;
