--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "./fonts";
+@import "./utils/mixins";
+@import "./utils/vars";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/page.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/about.scss";
+@import "./blocks/title.scss";
+@import "./blocks/exhibitions.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/photo.scss";
+@import "./blocks/paintings.scss";
