Task layout Museum

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,20 @@
+body {
+  font-family: "IBM Plex Sans", sans-serif;
+}
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+  font-family: NAMU-1600;
+  src: url(../fonts/NAMU-1600.ttf);
+}
+
+.header__menu-image {
+  font-family: NAMU-1600, sans-serif;
+}
+
+.page__section-title,
+.logo,
+input,
+.exhibitions__subtitle,
+h1,
+.about-us__form {
+  font-family: Montserrat, sans-serif;
 }
