--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$main-color: #0f0e08;
+$colorfull: #1a5a4c;
+$secondary-color: #687480;
+$decoration-color: #f14a27;
+$container-padding-phone: 20px;
+$container-padding-smartphone: 34px;
+$container-padding-tablet: 48px;
+$slider-gap-phone: 16px;
+$slider-gap-smartphone: 20px;
+$slider-gap-tablet: 30px;
+$dots-width: 102px;
