--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,21 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/button.scss";
+@import "./blocks/header.scss";
+@import "./blocks/exhibitions.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/icons.scss";
+@import "./blocks/contact-us.scss";
+@import "./blocks/schedule.scss";
 
 body {
   background: $c-gray;
